<resources>
    <string name="app_name">VideoGuard Watermark for Streaming</string>
    <string name="title_activity_player">PlayerActivity</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Android Studio</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>


    <string name="control_plan_url">control plane url</string>
    <string name="start_sessions_url">start sessions url</string>
    <string name="close_session_url">close session url</string>
    <string name="upload_url">navigation header</string>
    <string name="recording_folder">recording folder</string>

    <string name="auto_start_play">auto start play</string>
    <string name="auto_play_url">auto play url</string>
    <string name="show_uid">show uid</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>

    <!--public static final String RECORDING_FOLDER ="recording folder";-->

    <!--public static final String CONTROL_PLAN_URL = "control plane url";-->
    <!--public static final String START_SESSIONS_URL = "START SESSIONS URL";-->
    <!--public static final String CLOSE_SESSION_URL = "CLOSE SESSION URL";-->
    <!--public static final String UPLOAD_URL = "upload url";-->
    <!--public static  final  String AUTO_PLAY_URL = "auto play url";-->
</resources>
